// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`atom filters to the first two entries 1`] = `
[
  "<?xml version="1.0" encoding="utf-8"?>
<feed xmlns="http://www.w3.org/2005/Atom">
    <id>https://docusaurus.io/myBaseUrl/blog</id>
    <title>Hello Blog</title>
    <updated>2023-07-23T00:00:00.000Z</updated>
    <generator>https://github.com/jpmonette/feed</generator>
    <link rel="alternate" href="https://docusaurus.io/myBaseUrl/blog"/>
    <subtitle>Hello Blog</subtitle>
    <icon>https://docusaurus.io/myBaseUrl/image/favicon.ico</icon>
    <rights>Copyright</rights>
    <entry>
        <title type="html"><![CDATA[test links]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/blog-with-links</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/blog-with-links"/>
        <updated>2023-07-23T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[absolute full url]]></summary>
        <content type="html"><![CDATA[<p><a href="https://github.com/facebook/docusaurus" target="_blank" rel="noopener noreferrer">absolute full url</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">absolute pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">relative pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">md link</a></p>
<p><a href="https://docusaurus.io/myBaseUrl/blog/blog-with-links#title">anchor</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title#title">relative pathname + anchor</a></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png" width="760" height="160" class="img_yGFe"></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg" alt="" class="img_yGFe"></p>
<img srcset="https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w">
<img src="https://docusaurus.io/img/test-image.png">]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[MDX Blog Sample with require calls]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post"/>
        <updated>2021-03-06T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[Test MDX with require calls]]></summary>
        <content type="html"><![CDATA[<p>Test MDX with require calls</p>
<!-- -->
<!-- -->
<img src="https://docusaurus.io/img/test-image.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">]]></content>
    </entry>
</feed>",
]
`;

exports[`atom filters to the first two entries using limit 1`] = `
[
  "<?xml version="1.0" encoding="utf-8"?>
<feed xmlns="http://www.w3.org/2005/Atom">
    <id>https://docusaurus.io/myBaseUrl/blog</id>
    <title>Hello Blog</title>
    <updated>2023-07-23T00:00:00.000Z</updated>
    <generator>https://github.com/jpmonette/feed</generator>
    <link rel="alternate" href="https://docusaurus.io/myBaseUrl/blog"/>
    <subtitle>Hello Blog</subtitle>
    <icon>https://docusaurus.io/myBaseUrl/image/favicon.ico</icon>
    <rights>Copyright</rights>
    <entry>
        <title type="html"><![CDATA[test links]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/blog-with-links</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/blog-with-links"/>
        <updated>2023-07-23T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[absolute full url]]></summary>
        <content type="html"><![CDATA[<p><a href="https://github.com/facebook/docusaurus" target="_blank" rel="noopener noreferrer">absolute full url</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">absolute pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">relative pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">md link</a></p>
<p><a href="https://docusaurus.io/myBaseUrl/blog/blog-with-links#title">anchor</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title#title">relative pathname + anchor</a></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png" width="760" height="160" class="img_yGFe"></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg" alt="" class="img_yGFe"></p>
<img srcset="https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w">
<img src="https://docusaurus.io/img/test-image.png">]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[MDX Blog Sample with require calls]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post"/>
        <updated>2021-03-06T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[Test MDX with require calls]]></summary>
        <content type="html"><![CDATA[<p>Test MDX with require calls</p>
<!-- -->
<!-- -->
<img src="https://docusaurus.io/img/test-image.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">]]></content>
    </entry>
</feed>",
]
`;

exports[`atom has custom xslt files for feed 1`] = `
[
  "<?xml version="1.0" encoding="UTF-8"?>
<xsl:stylesheet version="3.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
  xmlns:atom="http://www.w3.org/2005/Atom">

  <xsl:output method="html" version="1.0" encoding="UTF-8" indent="yes" />

  <xsl:template match="/">
    <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
      <head>
        <title>Atom Feed | <xsl:value-of select="atom:feed/atom:title" /></title>
        <link rel="stylesheet" href="atom-feed.stylesheet.css" />
      </head>
      <body>
        <main>
          <div class="description">
            <div class="info">
              <strong>This is an Atom feed</strong>. Subscribe by copying the URL from the address
  bar into your newsreader. Visit <a href="https://aboutfeeds.com/">About Feeds</a> to learn more
  and get started. It’s free. </div>
            <h1 class="flex items-start">
              <div class="rss-icon">
                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                  viewBox="0 0 455.731 455.731" xml:space="preserve">
                  <g>
                    <rect x="0" y="0" style="fill:#F78422;" width="455.731" height="455.731"/>
                    <g>
                      <path style="fill:#FFFFFF;" d="M296.208,159.16C234.445,97.397,152.266,63.382,64.81,63.382v64.348
                        c70.268,0,136.288,27.321,185.898,76.931c49.609,49.61,76.931,115.63,76.931,185.898h64.348
                        C391.986,303.103,357.971,220.923,296.208,159.16z"/>
                      <path style="fill:#FFFFFF;" d="M64.143,172.273v64.348c84.881,0,153.938,69.056,153.938,153.939h64.348
                        C282.429,270.196,184.507,172.273,64.143,172.273z"/>
                      <circle style="fill:#FFFFFF;" cx="109.833" cy="346.26" r="46.088"/>
                    </g>
                  </g>
                </svg>
              </div>
  Atom Feed Preview </h1>
            <h2>
              <xsl:value-of select="atom:feed/atom:title" />
            </h2>
            <p>Description: <xsl:value-of select="atom:feed/atom:subtitle" /></p>
          </div>
          <h2>Recent Posts</h2>
          <div class="postsList">
            <xsl:for-each select="atom:feed/atom:entry">
              <div class="pb-7">
                <a href="{atom:link[@rel='alternate']/@href}">
                  <xsl:value-of select="atom:title" />
                </a>
                <div class="text-2 text-offset"> Published on <xsl:value-of
                    select="substring(atom:updated, 0, 17)" />
                </div>
                <div class="text-2 text-offset italic">
                  <xsl:value-of select="atom:summary" />
                </div>
              </div>
            </xsl:for-each>
          </div>
        </main>
      </body>
    </html>
  </xsl:template>

</xsl:stylesheet>",
  "/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

main {
  flex: 1 0 auto;
  width: 100%;
  margin: 4rem auto;
  padding: 1.5 rem;
  max-width: 800px;
  /* stylelint-disable-next-line font-family-name-quotes */
  font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell;
}

.info {
  display: block;
  margin: 3rem 0;
  padding: 2rem 3rem;
  border: 1px solid dodgerblue;
  border-left-width: 0.5rem;
  border-radius: 0.4rem;
  background-color: #edf5ff;
}

.rss-icon {
  height: 3.8rem;
  width: 3.8rem;
  margin-right: 1rem;
}

.flex {
  display: flex;
}

.items-start {
  align-items: flex-start;
}

.pb-7 {
  padding-bottom: 3rem;
}

a {
  color: #005aff;
  text-decoration: none;
}

h1 {
  text-wrap: balance;
  font-size: 3.8rem;
  line-height: 1;
  font-weight: 800;
  margin-bottom: 4rem;
}

h2 {
  font-size: 3rem;
  line-height: 1.2;
  font-weight: 700;
  margin-bottom: 3rem;
}

h2:not(:first-child) {
  margin-top: 5.8rem;
}

.italic {
  font-style: italic;
}
",
  "<?xml version="1.0" encoding="utf-8"?><?xml-stylesheet type="text/xsl" href="/custom-atom.stylesheet.xsl"?>
<feed xmlns="http://www.w3.org/2005/Atom">
    <id>https://docusaurus.io/myBaseUrl/blog</id>
    <title>Hello Blog</title>
    <updated>2023-07-23T00:00:00.000Z</updated>
    <generator>https://github.com/jpmonette/feed</generator>
    <link rel="alternate" href="https://docusaurus.io/myBaseUrl/blog"/>
    <subtitle>Hello Blog</subtitle>
    <icon>https://docusaurus.io/myBaseUrl/image/favicon.ico</icon>
    <rights>Copyright</rights>
    <entry>
        <title type="html"><![CDATA[test links]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/blog-with-links</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/blog-with-links"/>
        <updated>2023-07-23T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[absolute full url]]></summary>
        <content type="html"><![CDATA[<p><a href="https://github.com/facebook/docusaurus" target="_blank" rel="noopener noreferrer">absolute full url</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">absolute pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">relative pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">md link</a></p>
<p><a href="https://docusaurus.io/myBaseUrl/blog/blog-with-links#title">anchor</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title#title">relative pathname + anchor</a></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png" width="760" height="160" class="img_yGFe"></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg" alt="" class="img_yGFe"></p>
<img srcset="https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w">
<img src="https://docusaurus.io/img/test-image.png">]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[MDX Blog Sample with require calls]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post"/>
        <updated>2021-03-06T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[Test MDX with require calls]]></summary>
        <content type="html"><![CDATA[<p>Test MDX with require calls</p>
<!-- -->
<!-- -->
<img src="https://docusaurus.io/img/test-image.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[Full Blog Sample]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/mdx-blog-post</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post"/>
        <updated>2021-03-05T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[HTML Heading 1]]></summary>
        <content type="html"><![CDATA[<h1>HTML Heading 1</h1>
<h2>HTML Heading 2</h2>
<p>HTML Paragraph</p>
<!-- -->
<!-- -->
<p>Import DOM</p>
<h1>Heading 1</h1>
<h2 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-2">Heading 2<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-2" class="hash-link" aria-label="Direct link to Heading 2" title="Direct link to Heading 2">​</a></h2>
<h3 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-3">Heading 3<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-3" class="hash-link" aria-label="Direct link to Heading 3" title="Direct link to Heading 3">​</a></h3>
<h4 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-4">Heading 4<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-4" class="hash-link" aria-label="Direct link to Heading 4" title="Direct link to Heading 4">​</a></h4>
<h5 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-5">Heading 5<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-5" class="hash-link" aria-label="Direct link to Heading 5" title="Direct link to Heading 5">​</a></h5>
<ul>
<li>list1</li>
<li>list2</li>
<li>list3</li>
</ul>
<ul>
<li>list1</li>
<li>list2</li>
<li>list3</li>
</ul>
<p>Normal Text <em>Italics Text</em> <strong>Bold Text</strong></p>
<p><a href="https://v2.docusaurus.io/" target="_blank" rel="noopener noreferrer">link</a> <img loading="lazy" src="https://v2.docusaurus.io/" alt="image" class="img_yGFe"></p>]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[Complex Slug]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô"/>
        <updated>2020-08-16T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[complex url slug]]></summary>
        <content type="html"><![CDATA[<p>complex url slug</p>]]></content>
        <category label="date" term="date"/>
        <category label="complex" term="complex"/>
    </entry>
    <entry>
        <title type="html"><![CDATA[Simple Slug]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/simple/slug</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/simple/slug"/>
        <updated>2020-08-15T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[simple url slug]]></summary>
        <content type="html"><![CDATA[<p>simple url slug</p>]]></content>
        <author>
            <name>Sébastien Lorber</name>
            <uri>https://sebastienlorber.com</uri>
        </author>
    </entry>
    <entry>
        <title type="html"><![CDATA[some heading]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/heading-as-title</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/heading-as-title"/>
        <updated>2019-01-02T00:00:00.000Z</updated>
    </entry>
    <entry>
        <title type="html"><![CDATA[date-matter]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/date-matter</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/date-matter"/>
        <updated>2019-01-01T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[date inside front matter]]></summary>
        <content type="html"><![CDATA[<p>date inside front matter</p>]]></content>
        <category label="date" term="date"/>
    </entry>
    <entry>
        <title type="html"><![CDATA[Happy 1st Birthday Slash! (translated)]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash"/>
        <updated>2018-12-14T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[Happy birthday! (translated)]]></summary>
        <content type="html"><![CDATA[<p>Happy birthday! (translated)</p>]]></content>
        <author>
            <name>Yangshun Tay (translated)</name>
        </author>
        <author>
            <name>Sébastien Lorber (translated)</name>
            <email>lorber.sebastien@gmail.com</email>
        </author>
    </entry>
</feed>",
]
`;

exports[`atom has feed item for each post 1`] = `
[
  "<?xml version="1.0" encoding="utf-8"?>
<feed xmlns="http://www.w3.org/2005/Atom">
    <id>https://docusaurus.io/myBaseUrl/blog</id>
    <title>Hello Blog</title>
    <updated>2023-07-23T00:00:00.000Z</updated>
    <generator>https://github.com/jpmonette/feed</generator>
    <link rel="alternate" href="https://docusaurus.io/myBaseUrl/blog"/>
    <subtitle>Hello Blog</subtitle>
    <icon>https://docusaurus.io/myBaseUrl/image/favicon.ico</icon>
    <rights>Copyright</rights>
    <entry>
        <title type="html"><![CDATA[test links]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/blog-with-links</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/blog-with-links"/>
        <updated>2023-07-23T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[absolute full url]]></summary>
        <content type="html"><![CDATA[<p><a href="https://github.com/facebook/docusaurus" target="_blank" rel="noopener noreferrer">absolute full url</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">absolute pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">relative pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">md link</a></p>
<p><a href="https://docusaurus.io/myBaseUrl/blog/blog-with-links#title">anchor</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title#title">relative pathname + anchor</a></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png" width="760" height="160" class="img_yGFe"></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg" alt="" class="img_yGFe"></p>
<img srcset="https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w">
<img src="https://docusaurus.io/img/test-image.png">]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[MDX Blog Sample with require calls]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post"/>
        <updated>2021-03-06T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[Test MDX with require calls]]></summary>
        <content type="html"><![CDATA[<p>Test MDX with require calls</p>
<!-- -->
<!-- -->
<img src="https://docusaurus.io/img/test-image.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[Full Blog Sample]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/mdx-blog-post</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post"/>
        <updated>2021-03-05T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[HTML Heading 1]]></summary>
        <content type="html"><![CDATA[<h1>HTML Heading 1</h1>
<h2>HTML Heading 2</h2>
<p>HTML Paragraph</p>
<!-- -->
<!-- -->
<p>Import DOM</p>
<h1>Heading 1</h1>
<h2 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-2">Heading 2<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-2" class="hash-link" aria-label="Direct link to Heading 2" title="Direct link to Heading 2">​</a></h2>
<h3 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-3">Heading 3<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-3" class="hash-link" aria-label="Direct link to Heading 3" title="Direct link to Heading 3">​</a></h3>
<h4 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-4">Heading 4<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-4" class="hash-link" aria-label="Direct link to Heading 4" title="Direct link to Heading 4">​</a></h4>
<h5 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-5">Heading 5<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-5" class="hash-link" aria-label="Direct link to Heading 5" title="Direct link to Heading 5">​</a></h5>
<ul>
<li>list1</li>
<li>list2</li>
<li>list3</li>
</ul>
<ul>
<li>list1</li>
<li>list2</li>
<li>list3</li>
</ul>
<p>Normal Text <em>Italics Text</em> <strong>Bold Text</strong></p>
<p><a href="https://v2.docusaurus.io/" target="_blank" rel="noopener noreferrer">link</a> <img loading="lazy" src="https://v2.docusaurus.io/" alt="image" class="img_yGFe"></p>]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[Complex Slug]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô"/>
        <updated>2020-08-16T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[complex url slug]]></summary>
        <content type="html"><![CDATA[<p>complex url slug</p>]]></content>
        <category label="date" term="date"/>
        <category label="complex" term="complex"/>
    </entry>
    <entry>
        <title type="html"><![CDATA[Simple Slug]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/simple/slug</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/simple/slug"/>
        <updated>2020-08-15T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[simple url slug]]></summary>
        <content type="html"><![CDATA[<p>simple url slug</p>]]></content>
        <author>
            <name>Sébastien Lorber</name>
            <uri>https://sebastienlorber.com</uri>
        </author>
    </entry>
    <entry>
        <title type="html"><![CDATA[some heading]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/heading-as-title</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/heading-as-title"/>
        <updated>2019-01-02T00:00:00.000Z</updated>
    </entry>
    <entry>
        <title type="html"><![CDATA[date-matter]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/date-matter</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/date-matter"/>
        <updated>2019-01-01T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[date inside front matter]]></summary>
        <content type="html"><![CDATA[<p>date inside front matter</p>]]></content>
        <category label="date" term="date"/>
    </entry>
    <entry>
        <title type="html"><![CDATA[Happy 1st Birthday Slash! (translated)]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash"/>
        <updated>2018-12-14T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[Happy birthday! (translated)]]></summary>
        <content type="html"><![CDATA[<p>Happy birthday! (translated)</p>]]></content>
        <author>
            <name>Yangshun Tay (translated)</name>
        </author>
        <author>
            <name>Sébastien Lorber (translated)</name>
            <email>lorber.sebastien@gmail.com</email>
        </author>
    </entry>
</feed>",
]
`;

exports[`atom has xslt files for feed 1`] = `
[
  "<?xml version="1.0" encoding="utf-8"?><?xml-stylesheet type="text/xsl" href="atom-feed.xslt"?>
<feed xmlns="http://www.w3.org/2005/Atom">
    <id>https://docusaurus.io/myBaseUrl/blog</id>
    <title>Hello Blog</title>
    <updated>2023-07-23T00:00:00.000Z</updated>
    <generator>https://github.com/jpmonette/feed</generator>
    <link rel="alternate" href="https://docusaurus.io/myBaseUrl/blog"/>
    <subtitle>Hello Blog</subtitle>
    <icon>https://docusaurus.io/myBaseUrl/image/favicon.ico</icon>
    <rights>Copyright</rights>
    <entry>
        <title type="html"><![CDATA[test links]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/blog-with-links</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/blog-with-links"/>
        <updated>2023-07-23T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[absolute full url]]></summary>
        <content type="html"><![CDATA[<p><a href="https://github.com/facebook/docusaurus" target="_blank" rel="noopener noreferrer">absolute full url</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">absolute pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">relative pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">md link</a></p>
<p><a href="https://docusaurus.io/myBaseUrl/blog/blog-with-links#title">anchor</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title#title">relative pathname + anchor</a></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png" width="760" height="160" class="img_yGFe"></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg" alt="" class="img_yGFe"></p>
<img srcset="https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w">
<img src="https://docusaurus.io/img/test-image.png">]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[MDX Blog Sample with require calls]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post"/>
        <updated>2021-03-06T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[Test MDX with require calls]]></summary>
        <content type="html"><![CDATA[<p>Test MDX with require calls</p>
<!-- -->
<!-- -->
<img src="https://docusaurus.io/img/test-image.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[Full Blog Sample]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/mdx-blog-post</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post"/>
        <updated>2021-03-05T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[HTML Heading 1]]></summary>
        <content type="html"><![CDATA[<h1>HTML Heading 1</h1>
<h2>HTML Heading 2</h2>
<p>HTML Paragraph</p>
<!-- -->
<!-- -->
<p>Import DOM</p>
<h1>Heading 1</h1>
<h2 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-2">Heading 2<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-2" class="hash-link" aria-label="Direct link to Heading 2" title="Direct link to Heading 2">​</a></h2>
<h3 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-3">Heading 3<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-3" class="hash-link" aria-label="Direct link to Heading 3" title="Direct link to Heading 3">​</a></h3>
<h4 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-4">Heading 4<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-4" class="hash-link" aria-label="Direct link to Heading 4" title="Direct link to Heading 4">​</a></h4>
<h5 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-5">Heading 5<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-5" class="hash-link" aria-label="Direct link to Heading 5" title="Direct link to Heading 5">​</a></h5>
<ul>
<li>list1</li>
<li>list2</li>
<li>list3</li>
</ul>
<ul>
<li>list1</li>
<li>list2</li>
<li>list3</li>
</ul>
<p>Normal Text <em>Italics Text</em> <strong>Bold Text</strong></p>
<p><a href="https://v2.docusaurus.io/" target="_blank" rel="noopener noreferrer">link</a> <img loading="lazy" src="https://v2.docusaurus.io/" alt="image" class="img_yGFe"></p>]]></content>
    </entry>
    <entry>
        <title type="html"><![CDATA[Complex Slug]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô"/>
        <updated>2020-08-16T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[complex url slug]]></summary>
        <content type="html"><![CDATA[<p>complex url slug</p>]]></content>
        <category label="date" term="date"/>
        <category label="complex" term="complex"/>
    </entry>
    <entry>
        <title type="html"><![CDATA[Simple Slug]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/simple/slug</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/simple/slug"/>
        <updated>2020-08-15T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[simple url slug]]></summary>
        <content type="html"><![CDATA[<p>simple url slug</p>]]></content>
        <author>
            <name>Sébastien Lorber</name>
            <uri>https://sebastienlorber.com</uri>
        </author>
    </entry>
    <entry>
        <title type="html"><![CDATA[some heading]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/heading-as-title</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/heading-as-title"/>
        <updated>2019-01-02T00:00:00.000Z</updated>
    </entry>
    <entry>
        <title type="html"><![CDATA[date-matter]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/date-matter</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/date-matter"/>
        <updated>2019-01-01T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[date inside front matter]]></summary>
        <content type="html"><![CDATA[<p>date inside front matter</p>]]></content>
        <category label="date" term="date"/>
    </entry>
    <entry>
        <title type="html"><![CDATA[Happy 1st Birthday Slash! (translated)]]></title>
        <id>https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash</id>
        <link href="https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash"/>
        <updated>2018-12-14T00:00:00.000Z</updated>
        <summary type="html"><![CDATA[Happy birthday! (translated)]]></summary>
        <content type="html"><![CDATA[<p>Happy birthday! (translated)</p>]]></content>
        <author>
            <name>Yangshun Tay (translated)</name>
        </author>
        <author>
            <name>Sébastien Lorber (translated)</name>
            <email>lorber.sebastien@gmail.com</email>
        </author>
    </entry>
</feed>",
]
`;

exports[`json filters to the first two entries 1`] = `
[
  "{
    "version": "https://jsonfeed.org/version/1",
    "title": "Hello Blog",
    "home_page_url": "https://docusaurus.io/myBaseUrl/blog",
    "description": "Hello Blog",
    "items": [
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/blog-with-links",
            "content_html": "<p><a href=\\"https://github.com/facebook/docusaurus\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">absolute full url</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">absolute pathname</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">relative pathname</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">md link</a></p>/n<p><a href=\\"https://docusaurus.io/myBaseUrl/blog/blog-with-links#title\\">anchor</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title#title\\">relative pathname + anchor</a></p>/n<p><img loading=\\"lazy\\" src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\" width=\\"760\\" height=\\"160\\" class=\\"img_yGFe\\"></p>/n<p><img loading=\\"lazy\\" src=\\"https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg\\" alt=\\"\\" class=\\"img_yGFe\\"></p>/n<img srcset=\\"https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w\\">/n<img src=\\"https://docusaurus.io/img/test-image.png\\">",
            "url": "https://docusaurus.io/myBaseUrl/blog/blog-with-links",
            "title": "test links",
            "summary": "absolute full url",
            "date_modified": "2023-07-23T00:00:00.000Z",
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post",
            "content_html": "<p>Test MDX with require calls</p>/n<!-- -->/n<!-- -->/n<img src=\\"https://docusaurus.io/img/test-image.png\\">/n<img src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\">/n<img src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\">",
            "url": "https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post",
            "title": "MDX Blog Sample with require calls",
            "summary": "Test MDX with require calls",
            "date_modified": "2021-03-06T00:00:00.000Z",
            "tags": []
        }
    ]
}",
]
`;

exports[`json filters to the first two entries using limit 1`] = `
[
  "{
    "version": "https://jsonfeed.org/version/1",
    "title": "Hello Blog",
    "home_page_url": "https://docusaurus.io/myBaseUrl/blog",
    "description": "Hello Blog",
    "items": [
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/blog-with-links",
            "content_html": "<p><a href=\\"https://github.com/facebook/docusaurus\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">absolute full url</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">absolute pathname</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">relative pathname</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">md link</a></p>/n<p><a href=\\"https://docusaurus.io/myBaseUrl/blog/blog-with-links#title\\">anchor</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title#title\\">relative pathname + anchor</a></p>/n<p><img loading=\\"lazy\\" src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\" width=\\"760\\" height=\\"160\\" class=\\"img_yGFe\\"></p>/n<p><img loading=\\"lazy\\" src=\\"https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg\\" alt=\\"\\" class=\\"img_yGFe\\"></p>/n<img srcset=\\"https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w\\">/n<img src=\\"https://docusaurus.io/img/test-image.png\\">",
            "url": "https://docusaurus.io/myBaseUrl/blog/blog-with-links",
            "title": "test links",
            "summary": "absolute full url",
            "date_modified": "2023-07-23T00:00:00.000Z",
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post",
            "content_html": "<p>Test MDX with require calls</p>/n<!-- -->/n<!-- -->/n<img src=\\"https://docusaurus.io/img/test-image.png\\">/n<img src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\">/n<img src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\">",
            "url": "https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post",
            "title": "MDX Blog Sample with require calls",
            "summary": "Test MDX with require calls",
            "date_modified": "2021-03-06T00:00:00.000Z",
            "tags": []
        }
    ]
}",
]
`;

exports[`json has custom xslt files for feed 1`] = `
[
  "{
    "version": "https://jsonfeed.org/version/1",
    "title": "Hello Blog",
    "home_page_url": "https://docusaurus.io/myBaseUrl/blog",
    "description": "Hello Blog",
    "items": [
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/blog-with-links",
            "content_html": "<p><a href=\\"https://github.com/facebook/docusaurus\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">absolute full url</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">absolute pathname</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">relative pathname</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">md link</a></p>/n<p><a href=\\"https://docusaurus.io/myBaseUrl/blog/blog-with-links#title\\">anchor</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title#title\\">relative pathname + anchor</a></p>/n<p><img loading=\\"lazy\\" src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\" width=\\"760\\" height=\\"160\\" class=\\"img_yGFe\\"></p>/n<p><img loading=\\"lazy\\" src=\\"https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg\\" alt=\\"\\" class=\\"img_yGFe\\"></p>/n<img srcset=\\"https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w\\">/n<img src=\\"https://docusaurus.io/img/test-image.png\\">",
            "url": "https://docusaurus.io/myBaseUrl/blog/blog-with-links",
            "title": "test links",
            "summary": "absolute full url",
            "date_modified": "2023-07-23T00:00:00.000Z",
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post",
            "content_html": "<p>Test MDX with require calls</p>/n<!-- -->/n<!-- -->/n<img src=\\"https://docusaurus.io/img/test-image.png\\">/n<img src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\">/n<img src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\">",
            "url": "https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post",
            "title": "MDX Blog Sample with require calls",
            "summary": "Test MDX with require calls",
            "date_modified": "2021-03-06T00:00:00.000Z",
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/mdx-blog-post",
            "content_html": "<h1>HTML Heading 1</h1>/n<h2>HTML Heading 2</h2>/n<p>HTML Paragraph</p>/n<!-- -->/n<!-- -->/n<p>Import DOM</p>/n<h1>Heading 1</h1>/n<h2 class=\\"anchor anchorWithHideOnScrollNavbar_G5V2\\" id=\\"heading-2\\">Heading 2<a href=\\"https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-2\\" class=\\"hash-link\\" aria-label=\\"Direct link to Heading 2\\" title=\\"Direct link to Heading 2\\">​</a></h2>/n<h3 class=\\"anchor anchorWithHideOnScrollNavbar_G5V2\\" id=\\"heading-3\\">Heading 3<a href=\\"https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-3\\" class=\\"hash-link\\" aria-label=\\"Direct link to Heading 3\\" title=\\"Direct link to Heading 3\\">​</a></h3>/n<h4 class=\\"anchor anchorWithHideOnScrollNavbar_G5V2\\" id=\\"heading-4\\">Heading 4<a href=\\"https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-4\\" class=\\"hash-link\\" aria-label=\\"Direct link to Heading 4\\" title=\\"Direct link to Heading 4\\">​</a></h4>/n<h5 class=\\"anchor anchorWithHideOnScrollNavbar_G5V2\\" id=\\"heading-5\\">Heading 5<a href=\\"https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-5\\" class=\\"hash-link\\" aria-label=\\"Direct link to Heading 5\\" title=\\"Direct link to Heading 5\\">​</a></h5>/n<ul>/n<li>list1</li>/n<li>list2</li>/n<li>list3</li>/n</ul>/n<ul>/n<li>list1</li>/n<li>list2</li>/n<li>list3</li>/n</ul>/n<p>Normal Text <em>Italics Text</em> <strong>Bold Text</strong></p>/n<p><a href=\\"https://v2.docusaurus.io/\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">link</a> <img loading=\\"lazy\\" src=\\"https://v2.docusaurus.io/\\" alt=\\"image\\" class=\\"img_yGFe\\"></p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/mdx-blog-post",
            "title": "Full Blog Sample",
            "summary": "HTML Heading 1",
            "date_modified": "2021-03-05T00:00:00.000Z",
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô",
            "content_html": "<p>complex url slug</p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô",
            "title": "Complex Slug",
            "summary": "complex url slug",
            "date_modified": "2020-08-16T00:00:00.000Z",
            "tags": [
                "date",
                "complex"
            ]
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/simple/slug",
            "content_html": "<p>simple url slug</p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/simple/slug",
            "title": "Simple Slug",
            "summary": "simple url slug",
            "date_modified": "2020-08-15T00:00:00.000Z",
            "author": {
                "name": "Sébastien Lorber",
                "url": "https://sebastienlorber.com"
            },
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/heading-as-title",
            "content_html": "",
            "url": "https://docusaurus.io/myBaseUrl/blog/heading-as-title",
            "title": "some heading",
            "date_modified": "2019-01-02T00:00:00.000Z",
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/date-matter",
            "content_html": "<p>date inside front matter</p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/date-matter",
            "title": "date-matter",
            "summary": "date inside front matter",
            "date_modified": "2019-01-01T00:00:00.000Z",
            "tags": [
                "date"
            ]
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash",
            "content_html": "<p>Happy birthday! (translated)</p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash",
            "title": "Happy 1st Birthday Slash! (translated)",
            "summary": "Happy birthday! (translated)",
            "date_modified": "2018-12-14T00:00:00.000Z",
            "author": {
                "name": "Yangshun Tay (translated)"
            },
            "tags": []
        }
    ]
}",
]
`;

exports[`json has feed item for each post 1`] = `
[
  "<?xml version="1.0" encoding="UTF-8"?>
<xsl:stylesheet version="3.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
  xmlns:atom="http://www.w3.org/2005/Atom">

  <xsl:output method="html" version="1.0" encoding="UTF-8" indent="yes" />

<xsl:template match="/">
    <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
      <head>
        <title>RSS Feed | <xsl:value-of select="rss/channel/title" /></title>
        <link rel="stylesheet" href="rss-feed.stylesheet.css" />
      </head>
      <body>
        <main>
          <div class="description">
            <div class="info">
              <strong>This is an RSS feed</strong>. Subscribe by copying the URL from the address
  bar into your newsreader. Visit <a href="https://aboutfeeds.com/">About Feeds</a> to learn more
  and get started. It’s free. </div>
            <h1 class="flex items-start">
              <div class="rss-icon">
                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                  viewBox="0 0 455.731 455.731" xml:space="preserve">
<g>
	<rect x="0" y="0" style="fill:#F78422;" width="455.731" height="455.731"/>
	<g>
		<path style="fill:#FFFFFF;" d="M296.208,159.16C234.445,97.397,152.266,63.382,64.81,63.382v64.348
			c70.268,0,136.288,27.321,185.898,76.931c49.609,49.61,76.931,115.63,76.931,185.898h64.348
			C391.986,303.103,357.971,220.923,296.208,159.16z"/>
		<path style="fill:#FFFFFF;" d="M64.143,172.273v64.348c84.881,0,153.938,69.056,153.938,153.939h64.348
			C282.429,270.196,184.507,172.273,64.143,172.273z"/>
		<circle style="fill:#FFFFFF;" cx="109.833" cy="346.26" r="46.088"/>
	</g>
</g>
</svg>
              </div>
  RSS Feed Preview </h1>
            <h2>
              <xsl:value-of select="rss/channel/title" />
            </h2>
            <p>Description: <xsl:value-of select="rss/channel/description" /></p>
          </div>
          <h2>Recent Posts</h2>
          <div class="postsList">
            <xsl:for-each select="rss/channel/item">
              <div class="pb-7">
                <a href="{link}">
                  <xsl:value-of select="title" />
                </a>
                <div class="text-2 text-offset"> Published on <xsl:value-of
                    select="substring(pubDate,0,17)" />
                </div>
                <div class="text-2 text-offset italic">
                  <xsl:value-of
                    select="description" />
                </div>
              </div>
            </xsl:for-each>
          </div>
        </main>
      </body>
    </html>
  </xsl:template>

</xsl:stylesheet>",
  "/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

main {
  flex: 1 0 auto;
  width: 100%;
  margin: 4rem auto;
  padding: 1.5 rem;
  max-width: 800px;
  /* stylelint-disable-next-line font-family-name-quotes */
  font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell;
}

.info {
  display: block;
  margin: 3rem 0;
  padding: 2rem 3rem;
  border: 1px solid dodgerblue;
  border-left-width: 0.5rem;
  border-radius: 0.4rem;
  background-color: #edf5ff;
}

.rss-icon {
  height: 3.8rem;
  width: 3.8rem;
  margin-right: 1rem;
}

.flex {
  display: flex;
}

.items-start {
  align-items: flex-start;
}

.pb-7 {
  padding-bottom: 3rem;
}

a {
  color: #005aff;
  text-decoration: none;
}

h1 {
  text-wrap: balance;
  font-size: 3.8rem;
  line-height: 1;
  font-weight: 800;
  margin-bottom: 4rem;
}

h2 {
  font-size: 3rem;
  line-height: 1.2;
  font-weight: 700;
  margin-bottom: 3rem;
}

h2:not(:first-child) {
  margin-top: 5.8rem;
}

.italic {
  font-style: italic;
}
",
  "{
    "version": "https://jsonfeed.org/version/1",
    "title": "Hello Blog",
    "home_page_url": "https://docusaurus.io/myBaseUrl/blog",
    "description": "Hello Blog",
    "items": [
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/blog-with-links",
            "content_html": "<p><a href=\\"https://github.com/facebook/docusaurus\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">absolute full url</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">absolute pathname</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">relative pathname</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">md link</a></p>/n<p><a href=\\"https://docusaurus.io/myBaseUrl/blog/blog-with-links#title\\">anchor</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title#title\\">relative pathname + anchor</a></p>/n<p><img loading=\\"lazy\\" src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\" width=\\"760\\" height=\\"160\\" class=\\"img_yGFe\\"></p>/n<p><img loading=\\"lazy\\" src=\\"https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg\\" alt=\\"\\" class=\\"img_yGFe\\"></p>/n<img srcset=\\"https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w\\">/n<img src=\\"https://docusaurus.io/img/test-image.png\\">",
            "url": "https://docusaurus.io/myBaseUrl/blog/blog-with-links",
            "title": "test links",
            "summary": "absolute full url",
            "date_modified": "2023-07-23T00:00:00.000Z",
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post",
            "content_html": "<p>Test MDX with require calls</p>/n<!-- -->/n<!-- -->/n<img src=\\"https://docusaurus.io/img/test-image.png\\">/n<img src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\">/n<img src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\">",
            "url": "https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post",
            "title": "MDX Blog Sample with require calls",
            "summary": "Test MDX with require calls",
            "date_modified": "2021-03-06T00:00:00.000Z",
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/mdx-blog-post",
            "content_html": "<h1>HTML Heading 1</h1>/n<h2>HTML Heading 2</h2>/n<p>HTML Paragraph</p>/n<!-- -->/n<!-- -->/n<p>Import DOM</p>/n<h1>Heading 1</h1>/n<h2 class=\\"anchor anchorWithHideOnScrollNavbar_G5V2\\" id=\\"heading-2\\">Heading 2<a href=\\"https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-2\\" class=\\"hash-link\\" aria-label=\\"Direct link to Heading 2\\" title=\\"Direct link to Heading 2\\">​</a></h2>/n<h3 class=\\"anchor anchorWithHideOnScrollNavbar_G5V2\\" id=\\"heading-3\\">Heading 3<a href=\\"https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-3\\" class=\\"hash-link\\" aria-label=\\"Direct link to Heading 3\\" title=\\"Direct link to Heading 3\\">​</a></h3>/n<h4 class=\\"anchor anchorWithHideOnScrollNavbar_G5V2\\" id=\\"heading-4\\">Heading 4<a href=\\"https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-4\\" class=\\"hash-link\\" aria-label=\\"Direct link to Heading 4\\" title=\\"Direct link to Heading 4\\">​</a></h4>/n<h5 class=\\"anchor anchorWithHideOnScrollNavbar_G5V2\\" id=\\"heading-5\\">Heading 5<a href=\\"https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-5\\" class=\\"hash-link\\" aria-label=\\"Direct link to Heading 5\\" title=\\"Direct link to Heading 5\\">​</a></h5>/n<ul>/n<li>list1</li>/n<li>list2</li>/n<li>list3</li>/n</ul>/n<ul>/n<li>list1</li>/n<li>list2</li>/n<li>list3</li>/n</ul>/n<p>Normal Text <em>Italics Text</em> <strong>Bold Text</strong></p>/n<p><a href=\\"https://v2.docusaurus.io/\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">link</a> <img loading=\\"lazy\\" src=\\"https://v2.docusaurus.io/\\" alt=\\"image\\" class=\\"img_yGFe\\"></p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/mdx-blog-post",
            "title": "Full Blog Sample",
            "summary": "HTML Heading 1",
            "date_modified": "2021-03-05T00:00:00.000Z",
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô",
            "content_html": "<p>complex url slug</p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô",
            "title": "Complex Slug",
            "summary": "complex url slug",
            "date_modified": "2020-08-16T00:00:00.000Z",
            "tags": [
                "date",
                "complex"
            ]
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/simple/slug",
            "content_html": "<p>simple url slug</p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/simple/slug",
            "title": "Simple Slug",
            "summary": "simple url slug",
            "date_modified": "2020-08-15T00:00:00.000Z",
            "author": {
                "name": "Sébastien Lorber",
                "url": "https://sebastienlorber.com"
            },
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/heading-as-title",
            "content_html": "",
            "url": "https://docusaurus.io/myBaseUrl/blog/heading-as-title",
            "title": "some heading",
            "date_modified": "2019-01-02T00:00:00.000Z",
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/date-matter",
            "content_html": "<p>date inside front matter</p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/date-matter",
            "title": "date-matter",
            "summary": "date inside front matter",
            "date_modified": "2019-01-01T00:00:00.000Z",
            "tags": [
                "date"
            ]
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash",
            "content_html": "<p>Happy birthday! (translated)</p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash",
            "title": "Happy 1st Birthday Slash! (translated)",
            "summary": "Happy birthday! (translated)",
            "date_modified": "2018-12-14T00:00:00.000Z",
            "author": {
                "name": "Yangshun Tay (translated)"
            },
            "tags": []
        }
    ]
}",
]
`;

exports[`json has xslt files for feed 1`] = `
[
  "{
    "version": "https://jsonfeed.org/version/1",
    "title": "Hello Blog",
    "home_page_url": "https://docusaurus.io/myBaseUrl/blog",
    "description": "Hello Blog",
    "items": [
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/blog-with-links",
            "content_html": "<p><a href=\\"https://github.com/facebook/docusaurus\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">absolute full url</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">absolute pathname</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">relative pathname</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title\\">md link</a></p>/n<p><a href=\\"https://docusaurus.io/myBaseUrl/blog/blog-with-links#title\\">anchor</a></p>/n<p><a href=\\"https://docusaurus.io/blog/heading-as-title#title\\">relative pathname + anchor</a></p>/n<p><img loading=\\"lazy\\" src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\" width=\\"760\\" height=\\"160\\" class=\\"img_yGFe\\"></p>/n<p><img loading=\\"lazy\\" src=\\"https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg\\" alt=\\"\\" class=\\"img_yGFe\\"></p>/n<img srcset=\\"https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w\\">/n<img src=\\"https://docusaurus.io/img/test-image.png\\">",
            "url": "https://docusaurus.io/myBaseUrl/blog/blog-with-links",
            "title": "test links",
            "summary": "absolute full url",
            "date_modified": "2023-07-23T00:00:00.000Z",
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post",
            "content_html": "<p>Test MDX with require calls</p>/n<!-- -->/n<!-- -->/n<img src=\\"https://docusaurus.io/img/test-image.png\\">/n<img src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\">/n<img src=\\"https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png\\">",
            "url": "https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post",
            "title": "MDX Blog Sample with require calls",
            "summary": "Test MDX with require calls",
            "date_modified": "2021-03-06T00:00:00.000Z",
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/mdx-blog-post",
            "content_html": "<h1>HTML Heading 1</h1>/n<h2>HTML Heading 2</h2>/n<p>HTML Paragraph</p>/n<!-- -->/n<!-- -->/n<p>Import DOM</p>/n<h1>Heading 1</h1>/n<h2 class=\\"anchor anchorWithHideOnScrollNavbar_G5V2\\" id=\\"heading-2\\">Heading 2<a href=\\"https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-2\\" class=\\"hash-link\\" aria-label=\\"Direct link to Heading 2\\" title=\\"Direct link to Heading 2\\">​</a></h2>/n<h3 class=\\"anchor anchorWithHideOnScrollNavbar_G5V2\\" id=\\"heading-3\\">Heading 3<a href=\\"https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-3\\" class=\\"hash-link\\" aria-label=\\"Direct link to Heading 3\\" title=\\"Direct link to Heading 3\\">​</a></h3>/n<h4 class=\\"anchor anchorWithHideOnScrollNavbar_G5V2\\" id=\\"heading-4\\">Heading 4<a href=\\"https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-4\\" class=\\"hash-link\\" aria-label=\\"Direct link to Heading 4\\" title=\\"Direct link to Heading 4\\">​</a></h4>/n<h5 class=\\"anchor anchorWithHideOnScrollNavbar_G5V2\\" id=\\"heading-5\\">Heading 5<a href=\\"https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-5\\" class=\\"hash-link\\" aria-label=\\"Direct link to Heading 5\\" title=\\"Direct link to Heading 5\\">​</a></h5>/n<ul>/n<li>list1</li>/n<li>list2</li>/n<li>list3</li>/n</ul>/n<ul>/n<li>list1</li>/n<li>list2</li>/n<li>list3</li>/n</ul>/n<p>Normal Text <em>Italics Text</em> <strong>Bold Text</strong></p>/n<p><a href=\\"https://v2.docusaurus.io/\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\">link</a> <img loading=\\"lazy\\" src=\\"https://v2.docusaurus.io/\\" alt=\\"image\\" class=\\"img_yGFe\\"></p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/mdx-blog-post",
            "title": "Full Blog Sample",
            "summary": "HTML Heading 1",
            "date_modified": "2021-03-05T00:00:00.000Z",
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô",
            "content_html": "<p>complex url slug</p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô",
            "title": "Complex Slug",
            "summary": "complex url slug",
            "date_modified": "2020-08-16T00:00:00.000Z",
            "tags": [
                "date",
                "complex"
            ]
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/simple/slug",
            "content_html": "<p>simple url slug</p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/simple/slug",
            "title": "Simple Slug",
            "summary": "simple url slug",
            "date_modified": "2020-08-15T00:00:00.000Z",
            "author": {
                "name": "Sébastien Lorber",
                "url": "https://sebastienlorber.com"
            },
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/heading-as-title",
            "content_html": "",
            "url": "https://docusaurus.io/myBaseUrl/blog/heading-as-title",
            "title": "some heading",
            "date_modified": "2019-01-02T00:00:00.000Z",
            "tags": []
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/date-matter",
            "content_html": "<p>date inside front matter</p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/date-matter",
            "title": "date-matter",
            "summary": "date inside front matter",
            "date_modified": "2019-01-01T00:00:00.000Z",
            "tags": [
                "date"
            ]
        },
        {
            "id": "https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash",
            "content_html": "<p>Happy birthday! (translated)</p>",
            "url": "https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash",
            "title": "Happy 1st Birthday Slash! (translated)",
            "summary": "Happy birthday! (translated)",
            "date_modified": "2018-12-14T00:00:00.000Z",
            "author": {
                "name": "Yangshun Tay (translated)"
            },
            "tags": []
        }
    ]
}",
]
`;

exports[`rss filters to the first two entries 1`] = `
[
  "<?xml version="1.0" encoding="utf-8"?>
<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/">
    <channel>
        <title>Hello Blog</title>
        <link>https://docusaurus.io/myBaseUrl/blog</link>
        <description>Hello Blog</description>
        <lastBuildDate>Sun, 23 Jul 2023 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>https://github.com/jpmonette/feed</generator>
        <language>en</language>
        <copyright>Copyright</copyright>
        <item>
            <title><![CDATA[test links]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/blog-with-links</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/blog-with-links</guid>
            <pubDate>Sun, 23 Jul 2023 00:00:00 GMT</pubDate>
            <description><![CDATA[absolute full url]]></description>
            <content:encoded><![CDATA[<p><a href="https://github.com/facebook/docusaurus" target="_blank" rel="noopener noreferrer">absolute full url</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">absolute pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">relative pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">md link</a></p>
<p><a href="https://docusaurus.io/myBaseUrl/blog/blog-with-links#title">anchor</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title#title">relative pathname + anchor</a></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png" width="760" height="160" class="img_yGFe"></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg" alt="" class="img_yGFe"></p>
<img srcset="https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w">
<img src="https://docusaurus.io/img/test-image.png">]]></content:encoded>
        </item>
        <item>
            <title><![CDATA[MDX Blog Sample with require calls]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</guid>
            <pubDate>Sat, 06 Mar 2021 00:00:00 GMT</pubDate>
            <description><![CDATA[Test MDX with require calls]]></description>
            <content:encoded><![CDATA[<p>Test MDX with require calls</p>
<!-- -->
<!-- -->
<img src="https://docusaurus.io/img/test-image.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">]]></content:encoded>
        </item>
    </channel>
</rss>",
]
`;

exports[`rss filters to the first two entries using limit 1`] = `
[
  "<?xml version="1.0" encoding="utf-8"?>
<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/">
    <channel>
        <title>Hello Blog</title>
        <link>https://docusaurus.io/myBaseUrl/blog</link>
        <description>Hello Blog</description>
        <lastBuildDate>Sun, 23 Jul 2023 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>https://github.com/jpmonette/feed</generator>
        <language>en</language>
        <copyright>Copyright</copyright>
        <item>
            <title><![CDATA[test links]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/blog-with-links</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/blog-with-links</guid>
            <pubDate>Sun, 23 Jul 2023 00:00:00 GMT</pubDate>
            <description><![CDATA[absolute full url]]></description>
            <content:encoded><![CDATA[<p><a href="https://github.com/facebook/docusaurus" target="_blank" rel="noopener noreferrer">absolute full url</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">absolute pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">relative pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">md link</a></p>
<p><a href="https://docusaurus.io/myBaseUrl/blog/blog-with-links#title">anchor</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title#title">relative pathname + anchor</a></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png" width="760" height="160" class="img_yGFe"></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg" alt="" class="img_yGFe"></p>
<img srcset="https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w">
<img src="https://docusaurus.io/img/test-image.png">]]></content:encoded>
        </item>
        <item>
            <title><![CDATA[MDX Blog Sample with require calls]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</guid>
            <pubDate>Sat, 06 Mar 2021 00:00:00 GMT</pubDate>
            <description><![CDATA[Test MDX with require calls]]></description>
            <content:encoded><![CDATA[<p>Test MDX with require calls</p>
<!-- -->
<!-- -->
<img src="https://docusaurus.io/img/test-image.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">]]></content:encoded>
        </item>
    </channel>
</rss>",
]
`;

exports[`rss has custom xslt files for feed 1`] = `
[
  "<?xml version="1.0" encoding="UTF-8"?>
<xsl:stylesheet version="3.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
  xmlns:atom="http://www.w3.org/2005/Atom">

  <xsl:output method="html" version="1.0" encoding="UTF-8" indent="yes" />

<xsl:template match="/">
    <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
      <head>
        <title>RSS Feed | <xsl:value-of select="rss/channel/title" /></title>
        <link rel="stylesheet" href="rss-feed.stylesheet.css" />
      </head>
      <body>
        <main>
          <div class="description">
            <div class="info">
              <strong>This is an RSS feed</strong>. Subscribe by copying the URL from the address
  bar into your newsreader. Visit <a href="https://aboutfeeds.com/">About Feeds</a> to learn more
  and get started. It’s free. </div>
            <h1 class="flex items-start">
              <div class="rss-icon">
                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                  viewBox="0 0 455.731 455.731" xml:space="preserve">
<g>
	<rect x="0" y="0" style="fill:#F78422;" width="455.731" height="455.731"/>
	<g>
		<path style="fill:#FFFFFF;" d="M296.208,159.16C234.445,97.397,152.266,63.382,64.81,63.382v64.348
			c70.268,0,136.288,27.321,185.898,76.931c49.609,49.61,76.931,115.63,76.931,185.898h64.348
			C391.986,303.103,357.971,220.923,296.208,159.16z"/>
		<path style="fill:#FFFFFF;" d="M64.143,172.273v64.348c84.881,0,153.938,69.056,153.938,153.939h64.348
			C282.429,270.196,184.507,172.273,64.143,172.273z"/>
		<circle style="fill:#FFFFFF;" cx="109.833" cy="346.26" r="46.088"/>
	</g>
</g>
</svg>
              </div>
  RSS Feed Preview </h1>
            <h2>
              <xsl:value-of select="rss/channel/title" />
            </h2>
            <p>Description: <xsl:value-of select="rss/channel/description" /></p>
          </div>
          <h2>Recent Posts</h2>
          <div class="postsList">
            <xsl:for-each select="rss/channel/item">
              <div class="pb-7">
                <a href="{link}">
                  <xsl:value-of select="title" />
                </a>
                <div class="text-2 text-offset"> Published on <xsl:value-of
                    select="substring(pubDate,0,17)" />
                </div>
                <div class="text-2 text-offset italic">
                  <xsl:value-of
                    select="description" />
                </div>
              </div>
            </xsl:for-each>
          </div>
        </main>
      </body>
    </html>
  </xsl:template>

</xsl:stylesheet>",
  "/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

main {
  flex: 1 0 auto;
  width: 100%;
  margin: 4rem auto;
  padding: 1.5 rem;
  max-width: 800px;
  /* stylelint-disable-next-line font-family-name-quotes */
  font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell;
}

.info {
  display: block;
  margin: 3rem 0;
  padding: 2rem 3rem;
  border: 1px solid dodgerblue;
  border-left-width: 0.5rem;
  border-radius: 0.4rem;
  background-color: #edf5ff;
}

.rss-icon {
  height: 3.8rem;
  width: 3.8rem;
  margin-right: 1rem;
}

.flex {
  display: flex;
}

.items-start {
  align-items: flex-start;
}

.pb-7 {
  padding-bottom: 3rem;
}

a {
  color: #005aff;
  text-decoration: none;
}

h1 {
  text-wrap: balance;
  font-size: 3.8rem;
  line-height: 1;
  font-weight: 800;
  margin-bottom: 4rem;
}

h2 {
  font-size: 3rem;
  line-height: 1.2;
  font-weight: 700;
  margin-bottom: 3rem;
}

h2:not(:first-child) {
  margin-top: 5.8rem;
}

.italic {
  font-style: italic;
}
",
  "<?xml version="1.0" encoding="utf-8"?><?xml-stylesheet type="text/xsl" href="/custom-rss.stylesheet.xsl"?>
<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/">
    <channel>
        <title>Hello Blog</title>
        <link>https://docusaurus.io/myBaseUrl/blog</link>
        <description>Hello Blog</description>
        <lastBuildDate>Sun, 23 Jul 2023 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>https://github.com/jpmonette/feed</generator>
        <language>en</language>
        <copyright>Copyright</copyright>
        <item>
            <title><![CDATA[test links]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/blog-with-links</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/blog-with-links</guid>
            <pubDate>Sun, 23 Jul 2023 00:00:00 GMT</pubDate>
            <description><![CDATA[absolute full url]]></description>
            <content:encoded><![CDATA[<p><a href="https://github.com/facebook/docusaurus" target="_blank" rel="noopener noreferrer">absolute full url</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">absolute pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">relative pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">md link</a></p>
<p><a href="https://docusaurus.io/myBaseUrl/blog/blog-with-links#title">anchor</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title#title">relative pathname + anchor</a></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png" width="760" height="160" class="img_yGFe"></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg" alt="" class="img_yGFe"></p>
<img srcset="https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w">
<img src="https://docusaurus.io/img/test-image.png">]]></content:encoded>
        </item>
        <item>
            <title><![CDATA[MDX Blog Sample with require calls]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</guid>
            <pubDate>Sat, 06 Mar 2021 00:00:00 GMT</pubDate>
            <description><![CDATA[Test MDX with require calls]]></description>
            <content:encoded><![CDATA[<p>Test MDX with require calls</p>
<!-- -->
<!-- -->
<img src="https://docusaurus.io/img/test-image.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">]]></content:encoded>
        </item>
        <item>
            <title><![CDATA[Full Blog Sample]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/mdx-blog-post</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/mdx-blog-post</guid>
            <pubDate>Fri, 05 Mar 2021 00:00:00 GMT</pubDate>
            <description><![CDATA[HTML Heading 1]]></description>
            <content:encoded><![CDATA[<h1>HTML Heading 1</h1>
<h2>HTML Heading 2</h2>
<p>HTML Paragraph</p>
<!-- -->
<!-- -->
<p>Import DOM</p>
<h1>Heading 1</h1>
<h2 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-2">Heading 2<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-2" class="hash-link" aria-label="Direct link to Heading 2" title="Direct link to Heading 2">​</a></h2>
<h3 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-3">Heading 3<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-3" class="hash-link" aria-label="Direct link to Heading 3" title="Direct link to Heading 3">​</a></h3>
<h4 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-4">Heading 4<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-4" class="hash-link" aria-label="Direct link to Heading 4" title="Direct link to Heading 4">​</a></h4>
<h5 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-5">Heading 5<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-5" class="hash-link" aria-label="Direct link to Heading 5" title="Direct link to Heading 5">​</a></h5>
<ul>
<li>list1</li>
<li>list2</li>
<li>list3</li>
</ul>
<ul>
<li>list1</li>
<li>list2</li>
<li>list3</li>
</ul>
<p>Normal Text <em>Italics Text</em> <strong>Bold Text</strong></p>
<p><a href="https://v2.docusaurus.io/" target="_blank" rel="noopener noreferrer">link</a> <img loading="lazy" src="https://v2.docusaurus.io/" alt="image" class="img_yGFe"></p>]]></content:encoded>
        </item>
        <item>
            <title><![CDATA[Complex Slug]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô</guid>
            <pubDate>Sun, 16 Aug 2020 00:00:00 GMT</pubDate>
            <description><![CDATA[complex url slug]]></description>
            <content:encoded><![CDATA[<p>complex url slug</p>]]></content:encoded>
            <category>date</category>
            <category>complex</category>
        </item>
        <item>
            <title><![CDATA[Simple Slug]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/simple/slug</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/simple/slug</guid>
            <pubDate>Sat, 15 Aug 2020 00:00:00 GMT</pubDate>
            <description><![CDATA[simple url slug]]></description>
            <content:encoded><![CDATA[<p>simple url slug</p>]]></content:encoded>
        </item>
        <item>
            <title><![CDATA[some heading]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/heading-as-title</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/heading-as-title</guid>
            <pubDate>Wed, 02 Jan 2019 00:00:00 GMT</pubDate>
        </item>
        <item>
            <title><![CDATA[date-matter]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/date-matter</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/date-matter</guid>
            <pubDate>Tue, 01 Jan 2019 00:00:00 GMT</pubDate>
            <description><![CDATA[date inside front matter]]></description>
            <content:encoded><![CDATA[<p>date inside front matter</p>]]></content:encoded>
            <category>date</category>
        </item>
        <item>
            <title><![CDATA[Happy 1st Birthday Slash! (translated)]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash</guid>
            <pubDate>Fri, 14 Dec 2018 00:00:00 GMT</pubDate>
            <description><![CDATA[Happy birthday! (translated)]]></description>
            <content:encoded><![CDATA[<p>Happy birthday! (translated)</p>]]></content:encoded>
            <author>lorber.sebastien@gmail.com (Sébastien Lorber (translated))</author>
        </item>
    </channel>
</rss>",
]
`;

exports[`rss has feed item for each post 1`] = `
[
  "<?xml version="1.0" encoding="UTF-8"?>
<xsl:stylesheet version="3.0" xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
  xmlns:atom="http://www.w3.org/2005/Atom">

  <xsl:output method="html" version="1.0" encoding="UTF-8" indent="yes" />

  <xsl:template match="/">
    <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
      <head>
        <title>Atom Feed | <xsl:value-of select="atom:feed/atom:title" /></title>
        <link rel="stylesheet" href="atom-feed.stylesheet.css" />
      </head>
      <body>
        <main>
          <div class="description">
            <div class="info">
              <strong>This is an Atom feed</strong>. Subscribe by copying the URL from the address
  bar into your newsreader. Visit <a href="https://aboutfeeds.com/">About Feeds</a> to learn more
  and get started. It’s free. </div>
            <h1 class="flex items-start">
              <div class="rss-icon">
                <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                  viewBox="0 0 455.731 455.731" xml:space="preserve">
                  <g>
                    <rect x="0" y="0" style="fill:#F78422;" width="455.731" height="455.731"/>
                    <g>
                      <path style="fill:#FFFFFF;" d="M296.208,159.16C234.445,97.397,152.266,63.382,64.81,63.382v64.348
                        c70.268,0,136.288,27.321,185.898,76.931c49.609,49.61,76.931,115.63,76.931,185.898h64.348
                        C391.986,303.103,357.971,220.923,296.208,159.16z"/>
                      <path style="fill:#FFFFFF;" d="M64.143,172.273v64.348c84.881,0,153.938,69.056,153.938,153.939h64.348
                        C282.429,270.196,184.507,172.273,64.143,172.273z"/>
                      <circle style="fill:#FFFFFF;" cx="109.833" cy="346.26" r="46.088"/>
                    </g>
                  </g>
                </svg>
              </div>
  Atom Feed Preview </h1>
            <h2>
              <xsl:value-of select="atom:feed/atom:title" />
            </h2>
            <p>Description: <xsl:value-of select="atom:feed/atom:subtitle" /></p>
          </div>
          <h2>Recent Posts</h2>
          <div class="postsList">
            <xsl:for-each select="atom:feed/atom:entry">
              <div class="pb-7">
                <a href="{atom:link[@rel='alternate']/@href}">
                  <xsl:value-of select="atom:title" />
                </a>
                <div class="text-2 text-offset"> Published on <xsl:value-of
                    select="substring(atom:updated, 0, 17)" />
                </div>
                <div class="text-2 text-offset italic">
                  <xsl:value-of select="atom:summary" />
                </div>
              </div>
            </xsl:for-each>
          </div>
        </main>
      </body>
    </html>
  </xsl:template>

</xsl:stylesheet>",
  "/**
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

main {
  flex: 1 0 auto;
  width: 100%;
  margin: 4rem auto;
  padding: 1.5 rem;
  max-width: 800px;
  /* stylelint-disable-next-line font-family-name-quotes */
  font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell;
}

.info {
  display: block;
  margin: 3rem 0;
  padding: 2rem 3rem;
  border: 1px solid dodgerblue;
  border-left-width: 0.5rem;
  border-radius: 0.4rem;
  background-color: #edf5ff;
}

.rss-icon {
  height: 3.8rem;
  width: 3.8rem;
  margin-right: 1rem;
}

.flex {
  display: flex;
}

.items-start {
  align-items: flex-start;
}

.pb-7 {
  padding-bottom: 3rem;
}

a {
  color: #005aff;
  text-decoration: none;
}

h1 {
  text-wrap: balance;
  font-size: 3.8rem;
  line-height: 1;
  font-weight: 800;
  margin-bottom: 4rem;
}

h2 {
  font-size: 3rem;
  line-height: 1.2;
  font-weight: 700;
  margin-bottom: 3rem;
}

h2:not(:first-child) {
  margin-top: 5.8rem;
}

.italic {
  font-style: italic;
}
",
  "<?xml version="1.0" encoding="utf-8"?>
<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/">
    <channel>
        <title>Hello Blog</title>
        <link>https://docusaurus.io/myBaseUrl/blog</link>
        <description>Hello Blog</description>
        <lastBuildDate>Sun, 23 Jul 2023 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>https://github.com/jpmonette/feed</generator>
        <language>en</language>
        <copyright>Copyright</copyright>
        <item>
            <title><![CDATA[test links]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/blog-with-links</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/blog-with-links</guid>
            <pubDate>Sun, 23 Jul 2023 00:00:00 GMT</pubDate>
            <description><![CDATA[absolute full url]]></description>
            <content:encoded><![CDATA[<p><a href="https://github.com/facebook/docusaurus" target="_blank" rel="noopener noreferrer">absolute full url</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">absolute pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">relative pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">md link</a></p>
<p><a href="https://docusaurus.io/myBaseUrl/blog/blog-with-links#title">anchor</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title#title">relative pathname + anchor</a></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png" width="760" height="160" class="img_yGFe"></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg" alt="" class="img_yGFe"></p>
<img srcset="https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w">
<img src="https://docusaurus.io/img/test-image.png">]]></content:encoded>
        </item>
        <item>
            <title><![CDATA[MDX Blog Sample with require calls]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</guid>
            <pubDate>Sat, 06 Mar 2021 00:00:00 GMT</pubDate>
            <description><![CDATA[Test MDX with require calls]]></description>
            <content:encoded><![CDATA[<p>Test MDX with require calls</p>
<!-- -->
<!-- -->
<img src="https://docusaurus.io/img/test-image.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">]]></content:encoded>
        </item>
        <item>
            <title><![CDATA[Full Blog Sample]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/mdx-blog-post</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/mdx-blog-post</guid>
            <pubDate>Fri, 05 Mar 2021 00:00:00 GMT</pubDate>
            <description><![CDATA[HTML Heading 1]]></description>
            <content:encoded><![CDATA[<h1>HTML Heading 1</h1>
<h2>HTML Heading 2</h2>
<p>HTML Paragraph</p>
<!-- -->
<!-- -->
<p>Import DOM</p>
<h1>Heading 1</h1>
<h2 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-2">Heading 2<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-2" class="hash-link" aria-label="Direct link to Heading 2" title="Direct link to Heading 2">​</a></h2>
<h3 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-3">Heading 3<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-3" class="hash-link" aria-label="Direct link to Heading 3" title="Direct link to Heading 3">​</a></h3>
<h4 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-4">Heading 4<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-4" class="hash-link" aria-label="Direct link to Heading 4" title="Direct link to Heading 4">​</a></h4>
<h5 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-5">Heading 5<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-5" class="hash-link" aria-label="Direct link to Heading 5" title="Direct link to Heading 5">​</a></h5>
<ul>
<li>list1</li>
<li>list2</li>
<li>list3</li>
</ul>
<ul>
<li>list1</li>
<li>list2</li>
<li>list3</li>
</ul>
<p>Normal Text <em>Italics Text</em> <strong>Bold Text</strong></p>
<p><a href="https://v2.docusaurus.io/" target="_blank" rel="noopener noreferrer">link</a> <img loading="lazy" src="https://v2.docusaurus.io/" alt="image" class="img_yGFe"></p>]]></content:encoded>
        </item>
        <item>
            <title><![CDATA[Complex Slug]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô</guid>
            <pubDate>Sun, 16 Aug 2020 00:00:00 GMT</pubDate>
            <description><![CDATA[complex url slug]]></description>
            <content:encoded><![CDATA[<p>complex url slug</p>]]></content:encoded>
            <category>date</category>
            <category>complex</category>
        </item>
        <item>
            <title><![CDATA[Simple Slug]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/simple/slug</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/simple/slug</guid>
            <pubDate>Sat, 15 Aug 2020 00:00:00 GMT</pubDate>
            <description><![CDATA[simple url slug]]></description>
            <content:encoded><![CDATA[<p>simple url slug</p>]]></content:encoded>
        </item>
        <item>
            <title><![CDATA[some heading]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/heading-as-title</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/heading-as-title</guid>
            <pubDate>Wed, 02 Jan 2019 00:00:00 GMT</pubDate>
        </item>
        <item>
            <title><![CDATA[date-matter]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/date-matter</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/date-matter</guid>
            <pubDate>Tue, 01 Jan 2019 00:00:00 GMT</pubDate>
            <description><![CDATA[date inside front matter]]></description>
            <content:encoded><![CDATA[<p>date inside front matter</p>]]></content:encoded>
            <category>date</category>
        </item>
        <item>
            <title><![CDATA[Happy 1st Birthday Slash! (translated)]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash</guid>
            <pubDate>Fri, 14 Dec 2018 00:00:00 GMT</pubDate>
            <description><![CDATA[Happy birthday! (translated)]]></description>
            <content:encoded><![CDATA[<p>Happy birthday! (translated)</p>]]></content:encoded>
            <author>lorber.sebastien@gmail.com (Sébastien Lorber (translated))</author>
        </item>
    </channel>
</rss>",
]
`;

exports[`rss has xslt files for feed 1`] = `
[
  "<?xml version="1.0" encoding="utf-8"?><?xml-stylesheet type="text/xsl" href="rss-feed.xslt"?>
<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:content="http://purl.org/rss/1.0/modules/content/">
    <channel>
        <title>Hello Blog</title>
        <link>https://docusaurus.io/myBaseUrl/blog</link>
        <description>Hello Blog</description>
        <lastBuildDate>Sun, 23 Jul 2023 00:00:00 GMT</lastBuildDate>
        <docs>https://validator.w3.org/feed/docs/rss2.html</docs>
        <generator>https://github.com/jpmonette/feed</generator>
        <language>en</language>
        <copyright>Copyright</copyright>
        <item>
            <title><![CDATA[test links]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/blog-with-links</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/blog-with-links</guid>
            <pubDate>Sun, 23 Jul 2023 00:00:00 GMT</pubDate>
            <description><![CDATA[absolute full url]]></description>
            <content:encoded><![CDATA[<p><a href="https://github.com/facebook/docusaurus" target="_blank" rel="noopener noreferrer">absolute full url</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">absolute pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">relative pathname</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title">md link</a></p>
<p><a href="https://docusaurus.io/myBaseUrl/blog/blog-with-links#title">anchor</a></p>
<p><a href="https://docusaurus.io/blog/heading-as-title#title">relative pathname + anchor</a></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png" width="760" height="160" class="img_yGFe"></p>
<p><img loading="lazy" src="https://docusaurus.io/assets/images/slash-introducing-411a16dd05086935b8e9ddae38ae9b45.svg" alt="" class="img_yGFe"></p>
<img srcset="https://docusaurus.io/img/test-image.png 300w, https://docusaurus.io/img/docusaurus-social-card.png 500w">
<img src="https://docusaurus.io/img/test-image.png">]]></content:encoded>
        </item>
        <item>
            <title><![CDATA[MDX Blog Sample with require calls]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/mdx-require-blog-post</guid>
            <pubDate>Sat, 06 Mar 2021 00:00:00 GMT</pubDate>
            <description><![CDATA[Test MDX with require calls]]></description>
            <content:encoded><![CDATA[<p>Test MDX with require calls</p>
<!-- -->
<!-- -->
<img src="https://docusaurus.io/img/test-image.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">
<img src="https://docusaurus.io/assets/images/test-image-742d39e51f41482e8132e79c09ad4eea.png">]]></content:encoded>
        </item>
        <item>
            <title><![CDATA[Full Blog Sample]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/mdx-blog-post</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/mdx-blog-post</guid>
            <pubDate>Fri, 05 Mar 2021 00:00:00 GMT</pubDate>
            <description><![CDATA[HTML Heading 1]]></description>
            <content:encoded><![CDATA[<h1>HTML Heading 1</h1>
<h2>HTML Heading 2</h2>
<p>HTML Paragraph</p>
<!-- -->
<!-- -->
<p>Import DOM</p>
<h1>Heading 1</h1>
<h2 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-2">Heading 2<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-2" class="hash-link" aria-label="Direct link to Heading 2" title="Direct link to Heading 2">​</a></h2>
<h3 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-3">Heading 3<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-3" class="hash-link" aria-label="Direct link to Heading 3" title="Direct link to Heading 3">​</a></h3>
<h4 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-4">Heading 4<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-4" class="hash-link" aria-label="Direct link to Heading 4" title="Direct link to Heading 4">​</a></h4>
<h5 class="anchor anchorWithHideOnScrollNavbar_G5V2" id="heading-5">Heading 5<a href="https://docusaurus.io/myBaseUrl/blog/mdx-blog-post#heading-5" class="hash-link" aria-label="Direct link to Heading 5" title="Direct link to Heading 5">​</a></h5>
<ul>
<li>list1</li>
<li>list2</li>
<li>list3</li>
</ul>
<ul>
<li>list1</li>
<li>list2</li>
<li>list3</li>
</ul>
<p>Normal Text <em>Italics Text</em> <strong>Bold Text</strong></p>
<p><a href="https://v2.docusaurus.io/" target="_blank" rel="noopener noreferrer">link</a> <img loading="lazy" src="https://v2.docusaurus.io/" alt="image" class="img_yGFe"></p>]]></content:encoded>
        </item>
        <item>
            <title><![CDATA[Complex Slug]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/hey/my super path/héllô</guid>
            <pubDate>Sun, 16 Aug 2020 00:00:00 GMT</pubDate>
            <description><![CDATA[complex url slug]]></description>
            <content:encoded><![CDATA[<p>complex url slug</p>]]></content:encoded>
            <category>date</category>
            <category>complex</category>
        </item>
        <item>
            <title><![CDATA[Simple Slug]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/simple/slug</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/simple/slug</guid>
            <pubDate>Sat, 15 Aug 2020 00:00:00 GMT</pubDate>
            <description><![CDATA[simple url slug]]></description>
            <content:encoded><![CDATA[<p>simple url slug</p>]]></content:encoded>
        </item>
        <item>
            <title><![CDATA[some heading]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/heading-as-title</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/heading-as-title</guid>
            <pubDate>Wed, 02 Jan 2019 00:00:00 GMT</pubDate>
        </item>
        <item>
            <title><![CDATA[date-matter]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/date-matter</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/date-matter</guid>
            <pubDate>Tue, 01 Jan 2019 00:00:00 GMT</pubDate>
            <description><![CDATA[date inside front matter]]></description>
            <content:encoded><![CDATA[<p>date inside front matter</p>]]></content:encoded>
            <category>date</category>
        </item>
        <item>
            <title><![CDATA[Happy 1st Birthday Slash! (translated)]]></title>
            <link>https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash</link>
            <guid>https://docusaurus.io/myBaseUrl/blog/2018/12/14/Happy-First-Birthday-Slash</guid>
            <pubDate>Fri, 14 Dec 2018 00:00:00 GMT</pubDate>
            <description><![CDATA[Happy birthday! (translated)]]></description>
            <content:encoded><![CDATA[<p>Happy birthday! (translated)</p>]]></content:encoded>
            <author>lorber.sebastien@gmail.com (Sébastien Lorber (translated))</author>
        </item>
    </channel>
</rss>",
]
`;
